app/styles/style.css
/* ... */
@media (max-width: 1366px) {
    .bloque-menu {
		width: 402px;
		height: 228px;
	}

	.menu-video {
		width: 400px;
		height: 226px;
	}
}

@media (max-width: 1280px) {
    .bloque-menu {
		width: 362px;
		height: 207px;
	}

	.menu-video {
		width: 360px;
		height: 205px;
	}
}

@media (max-width: 1024px) {
    .bloque-menu {
		width: 302px;
		height: 173px;
	}

	.menu-video {
		width: 300px;
		height: 171px;
	}
	.menu-redes > ul.social.gray > li {
		font-size: 18px;
	}
	.fullscreen-bg {
        display: none;
    }

    .fullscreen-bg__video {
        display: none;
    }
}

@media (max-height: 900px) {
	.ebit-home {
		min-height: 810px;
	}
}

@media (max-width: 767px) {

}

